<update> updated screen size and overflow issue

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -272,15 +272,16 @@ body{
     height: fit-content;
     border: 2px solid $grey;
     border-radius: 5px;
-    position: absolute;
-    right: -200%;
+    position: fixed;
+    scale: 0;
+    right:0;
     transition: 0.4s;
     background-color: $white;
     z-index: 1000;
     padding: 0.5em;
 
     &.is-active {
-        right:0
+        scale: (1)
     }
 
     form {
